--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,4 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 BASE_URL="https://newsapi.org/"
+API_KEY="c451f17cf0674fb2b385bae665a4627a"
