--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,6 @@ android.nonTransitiveRClass=true
 
 BASE_URL="https://newsapi.org/"
 API_KEY="c451f17cf0674fb2b385bae665a4627a"
+
+NEWS_SOURCE_BBC="bbc-news"
+NEWS_SOURCE_INDEPENDENT="independent"
