Add fingerprint scanner

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,5 @@ dependencies {
 
     implementation 'io.coil-kt:coil:1.4.0'
     implementation 'org.threeten:threetenbp:1.4.4'
+    implementation 'androidx.biometric:biometric-ktx:1.2.0-alpha05'
 }
