--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,4 +95,11 @@ dependencies {
     implementation 'io.coil-kt:coil:1.4.0'
     implementation 'org.threeten:threetenbp:1.4.4'
     implementation 'androidx.biometric:biometric-ktx:1.2.0-alpha05'
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.2'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.0'
+    testImplementation 'io.mockk:mockk:1.13.2'
+    testImplementation 'org.amshove.kluent:kluent-android:1.68'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
 }
